Color changes to background

--- a/src/assets/sass/_colors.scss
+++ b/src/assets/sass/_colors.scss
@@ -2,7 +2,8 @@
 
 // TODO: add theme mixins
 // blue/white
-$foreground: rgb(212, 249, 250);
+$foreground: rgb(174, 233, 163);
+// $foreground: rgb(212, 249, 250);
 $background: rgb(0, 12, 12);
 $alert: rgb(255, 60, 0);
 
